--- a/client/src/components/banner/Banner.module.css
+++ b/client/src/components/banner/Banner.module.css
@@ -9,16 +9,18 @@
   margin: 2rem 0;
   margin-bottom: 0.5rem;
 }
+
 .content{
   color: #2E0052;
   margin: 2rem 7%;
-  width: 50%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  font-size: 3em;
+  font-size: 2vw;
   font-weight: bolder;
 }
+
 .content p{
   margin: 0;
 }
@@ -29,7 +31,7 @@
 }
 .button p{
   color: white;
-  font-size: 1vw;
+  font-size: 0.8rem;
   padding: 0.7rem 2.5rem;
 }
 
@@ -53,15 +55,36 @@
 
 @media only screen and (max-width: 786px) {
   .body{
-    margin-top: 8rem;
+    margin-top: 7rem;
     width: 90%;
   }
   .content{
     width: 50%;
-    font-size: 1.8em;
   }
   .body img{
     height: 14rem;
     right: 0.2rem;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .content{
+    width: 50%;
+    font-size: 1.4em;
+  }
+  .body img{
+    height: 13rem;
+    right: 0.1rem;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .content{
+    width: 80%;
+    font-size: 1.8em;
+    align-items: center;
+    text-align: center;
+  }
+  .body img{
+    display: none;
   }
 }
