--- a/client/src/components/itemContainer/ItemContainer.module.css
+++ b/client/src/components/itemContainer/ItemContainer.module.css
@@ -11,6 +11,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   row-gap: 1.5rem;
+  padding-bottom: 4rem;
 }
 
 .flexContainer {
@@ -26,5 +27,6 @@
     display: grid;
     grid-template-columns: repeat(2, 50%);
     row-gap: 1.5rem;
+    padding-bottom: 4rem;
   }
 }
