--- a/client/src/pages/auth/SignIn.module.css
+++ b/client/src/pages/auth/SignIn.module.css
@@ -1,12 +1,14 @@
 .body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: auto;
   font-size: 1.2rem;
-  height: 94vh;
+  height: 100vh;
   background: #f0f0f0;
 }
+
 .content {
   width: 30%;
   height: 100%;
@@ -16,6 +18,7 @@
   gap: 1.5rem;
   align-items: center;
 }
+
 .logo {
   display: flex;
   justify-content: center;
