--- a/client/src/pages/auth/SignUp.module.css
+++ b/client/src/pages/auth/SignUp.module.css
@@ -1,11 +1,12 @@
 .body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: auto;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
+  height: 100vh;
   background: #f0f0f0;
-  min-height: 94vh;
 }
 .content {
   width: 30%;
