--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -1,11 +1,17 @@
 .body{
   background: #f0f0f0;
+  min-height: 100vh;
+  height: 100%;
+  position: relative;
+}
+
+.container{
   overflow-x: hidden;
   padding: 0 6rem;
+  padding-bottom: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
 }
 
 .searchBar{
@@ -13,12 +19,25 @@
   margin: 1rem;
   display: flex;
   justify-content: center;
-  align-self: center;
+  align-items: center;
+  position: relative;
+}
+
+.icon{
+  position: absolute;
+  right: 10%;
+  cursor: pointer;
+}
+
+.icon:hover{
+  border-radius: 50%;
+  background: rgb(160,160,160, 0.5);
+  box-shadow: 0 0 0 0.5rem rgb(160,160,160, 0.5);
 }
 
 .searchBar input{
   width: 80%;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding: 0.3rem 3rem;
   border-radius: 2rem;
   border: 2px solid #c2c2c2;
@@ -65,16 +84,19 @@
 }
 
 @media only screen and (max-width: 1024px) {
-  .body{
+  .container{
     padding: 0 3rem;
   }
   .searchBar input{
     width: 100%;
   }
+  .icon{
+    right: 1rem;
+  }
 }
 
 @media only screen and (max-width: 786px) {
-  .body{
+  .container{
     padding: 0;
   }
   .filters{
@@ -89,13 +111,16 @@
     margin: 0;
     width: 100%;
     height: 3rem;
-    padding: 1rem;
+    padding: 1rem 0;
   }
   .searchBar input{
     width: 80%;
     font-size: 1.4rem;
     padding: 0.3rem 1.5rem;
     border-radius: 1rem;
+  }
+  .icon{
+    right: 10%;
   }
   .views{
     display: none;
