--- a/client/src/pages/auth/SignIn.module.css
+++ b/client/src/pages/auth/SignIn.module.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: auto;
   font-size: 1.2rem;
-  height: 100vh;
+  min-height: 100vh;
+  height: fit-content;
   background: #f0f0f0;
 }
 
